...
            android:id="@+id/email_text_input_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_email"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />
...
            android:id="@+id/password_text_input_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_password"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_width="fill_parent"
                android:maxLines="1"
                android:textColor="@android:color/black"
...
                android:layout_weight="1"
                android:layout_width="0dp"
                android:onClick="onClick" />

            <Button
                android:background="@color/colorAccent"
                android:id="@+id/btn_login"
                android:layout_height="@dimen/btn_height"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:onClick="onClick"
                android:text="@string/btn_login_txt"
                android:textColor="@android:color/black" />
        </LinearLayout>


        <Button
            android:background="@null"
            android:id="@+id/btn_forgot_password"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_width="fill_parent"
            android:onClick="onClick"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Link to Login Screen -->

        <Button
            android:background="@null"
            android:id="@+id/btn_signup"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_width="fill_parent"
            android:onClick="onClick"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
...
