...
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:hint="@string/username_hint_signup"
                android:id="@+id/username_signup"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:textColor="@android:color/black" />

        </android.support.design.widget.TextInputLayout>
...

        </android.support.design.widget.TextInputLayout>

        <Button
            style="?android:textAppearanceSmall"
            android:background="@color/colorAccent"
            android:id="@+id/sign_up_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:onClick="onClick"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
...
