...
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <android.support.design.widget.TextInputEditText
                android:hint="@string/hint_email"
                android:id="@+id/reset_email"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:textColor="@android:color/black"
...
