...
    <string name="restaurant_distance_text">0.7 mi</string>
    <string name="defaultRestaurantItemDistance">0 Miles</string>
    <string name="defaultRestaurantName">RestaurantName</string>
    <string name="restaurantItemImageViewDescription">Picture of the Restaurant</string>
    <string name="nearbyRestaurantsHeader">Something funny</string>
    <string name="decription_title">Description</string>
    <string name="done_button">Done</string>
    <string name="type_your_description_here">Type your description here.</string>
    <string name="enter_your_description">Enter your description.</string>
    <string-array name="types_of_food">
        <item name="chinese">Chinese Cuisine</item>
        <item name="indian">Indian Cuisine</item>
        <item name="fast">Fast Food</item>
        <item name="upscale">Upscale</item>
        <item name="slovak">Slovakian Cuisine</item>
        <item name="affordable">Affordable</item>
        <item name="other">Other</item>
    </string-array>
    <string name="type_of_food_title">Type of Food</string>
    <string name="name_hint">Restaurant Name</string>
    <string name="address_hint">Address</string>
    <string name="zipcode_hint">Zip</string>
    <string name="state_hint">State</string>
    <string name="typeOfFood">Type of food?</string>
    <string name="hours_restaurant">Hours?</string>
    <string name="menu_detail">Menu</string>
    <string name="description_restaurant">Description</string>
    <string name="add_category">+ Add Category</string>
    <string name="delete_category">- Delete Category</string>
    <string name="opening_hours_title">Opening Hours</string>
    <string name="opening_hours_sunday">Sunday:</string>
    <string name="opening_hours_monday">Monday:</string>
    <string name="opening_hours_tuesday">Tuesday:</string>
    <string name="opening_hours_wednesday">Wednesday:</string>
    <string name="opening_hours_thursday">Thursday:</string>
    <string name="opening_hours_friday">Friday:</string>
...
    <string name="appetizers_headline">Appetizers</string>
    <string name="menu_title">Menu</string>
    <string name="add_meal">+ Add meal</string>
    <string name="delete_meal">- delete meal</string>
    <string name="nav_menu_description">Navigation Menu</string>
    <string name="owner_restaurant_add_btn">Add a new Restaurant</string>
    <string name="restaurant_owner_tv">Restaurants you manage:</string>
    <string name="add_restaurant_country_hint">Country</string>
    <string name="city_hint">City</string>
    <string name="loading">Loading…</string>
    <string name="sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_submit">Submit</string>
...
    <string name="btn_link_to_register">Not already a member? Register Here!</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="profile_placeholder_txt">You should be seeing some general information about your profile and should be able to edit some of it here.</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="btn_link_to_login">Not a member? Get registered Now!</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">We just need your email to send you password reset information</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="username_hint_signup">Username</string>
    <string-array name="navigation_drawer_options">
        <item>Home</item>
        <item>Profile</item>
        <item>Map</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About The Team</item>
        <item>Favorite Restaurant</item>
        <item>Restaurant Owners</item>
        <item>Favorite Restaurants</item>
...
