<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp">


        <ImageView
            android:contentDescription="@string/card_image"
            android:id="@+id/restaurant_creation_add_photo"
            android:layout_alignParentTop="true"
            android:layout_height="180dp"
            android:layout_width="match_parent"
            android:onClick="onNewRestaurantImageClick"
            android:scaleType="centerCrop"
            android:src="@drawable/restaurant_placeholder" />

        <EditText
            android:hint="@string/name_hint"
            android:id="@+id/restaurant_creation_name"
            android:inputType="text"
            android:layout_below="@+id/restaurant_creation_add_photo"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />

        <EditText
            android:hint="@string/address_hint"
            android:id="@+id/restaurant_creation_address"
            android:inputType="text"
            android:layout_below="@+id/restaurant_creation_name"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" />


        <LinearLayout
            android:id="@+id/layout_line1"
            android:layout_below="@+id/restaurant_creation_address"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <EditText
                android:hint="@string/city_hint"
                android:id="@+id/restaurant_creation_city"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:layout_width="75dp" />

            <EditText
                android:hint="@string/state_hint"
                android:id="@+id/restaurant_creation_state"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_width="75dp" />

            <EditText
                android:hint="@string/zipcode_hint"
                android:id="@+id/restaurant_creation_zipcode"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_width="120dp" />


        </LinearLayout>

        <Spinner
            android:hint="@string/add_restaurant_country_hint"
            android:id="@+id/restaurant_creation_country_spinner"
            android:layout_below="@id/layout_line1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <EditText
            android:hint="@string/description_restaurant"
            android:id="@+id/restaurant_creation_description"
            android:layout_below="@+id/restaurant_creation_country_spinner"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lines="2"
            android:maxLines="4" />

        <LinearLayout
            android:id="@+id/menu_and_hours_creation"
            android:layout_below="@id/restaurant_creation_description"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <Button
                android:id="@+id/btn_restaurant_creation_hours"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:onClick="onClick"
                android:text="@string/hours_restaurant" />

            <Button
                android:id="@+id/btn_menu_creation"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:onClick="onClick" />

        </LinearLayout>

        <com.jzheadley.eat.ui.layoutobjects.CheckBoxGroupView
            android:id="@+id/restaurant_food_type"
            android:layout_below="@id/menu_and_hours_creation"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/submit_new_restaurant"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/restaurant_food_type"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:onClick="onSubmitButton"
            android:text="@string/done_button"
            android:textSize="16sp" />


    </RelativeLayout>

</ScrollView>
