<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/restaurants_owned"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_width="wrap_content"
            android:text="@string/restaurant_owner_tv" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/owned_restaurant_card_list"
            android:layout_below="@+id/restaurants_owned"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent" />


    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:clickable="true"
        android:id="@+id/submit_new_restaurant"
        android:layout_gravity="bottom|end"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_add"
        app:layout_anchor="@+id/owned_restaurant_card_list"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_behavior="com.jzheadley.eat.ui.layoutobjects.ScrollAwareFloatingActionButtonBehavior" />
</android.support.design.widget.CoordinatorLayout>